robot_ws/log/build_2024-10-16_10-32-39/wheel_controller/stderr.log
  File "/home/dora/dora_ros2_ws/robot_ws/install/wheel_controller/lib/python3.10/site-packages/wheel_controller/wheel_controller.py", line 197
    """ Regular update of odod
    ^
SyntaxError: unterminated triple-quoted string literal (detected at line 206)

